# rlottie

./: .cursorignore  .gitignore  CMakeLists.txt  RENDER_FRAMEWORK_README.md  meson.build  outrlottie.1.txt  run.sh  run_qt_examples.sh
cmake/: config.h.in
example/: CMakeLists.txt  README_QT_EXAMPLES.md  qtdemo.cpp  qtdemo_marker.cpp  qtperformance.cpp  qtplayer.cpp  qtviewer.cpp  render_framework_demo.cpp  test_log.cpp  test_qt_rendering.cpp
example/resource/: 3d.json  a_mountain.json  test.json
inc/: rlottie.h
src/lottie/: lottieanimation.cpp  lottieitem.cpp  lottieitem.h  lottieloader.cpp  lottieparser.cpp
src/render/: render_manager.cpp  render_manager.h
src/vector/: vcowptr.h  vdrawable.cpp  vdrawable.h  vdrawhelper.cpp  vglobal.h  vpainter.cpp  vpainter.h  vpainter_qt.cpp  vpainter_qt.h  vpainter_vglite.cpp  vpainter_vglite.h  vraster.cpp  vrle.cpp
src/vector/stb/: CMakeLists.txt
test/: test_lottieanimation.cpp  test_lottieanimation_capi.cpp
